src/test/deca/context/invalid/initialization/assiging-float-to-int.deca
// Description:
//    Programme minimaliste affectant un float a un int.
//
// Resultats:
//    error : types incompatibles
//
// Historique:
//    cree le 01/01/2025

{
    int a ;
    a = 5.5;
}